@@ -191,10 +191,10 @@ bgcolor="#ffffff">
       <LI>LoadBalancer/tao_loadmanager</LI>
       <LI>CosEvent_Service/tao_cosevent</LI>
       <LI>Event_Service/tao_rtevent</LI>
-      <LI>FTRT_Event_Service</LI>
-      <LI>FTRT_Event_Service</LI>
+      <LI>FTRT_Event_Service/Event_Service/ftrt_eventservice</LI>
+      <LI>FTRT_Event_Service/Factory_Service/ftrtec_factory_service</LI>
+      <LI>FTRT_Event_Service/Gateway_Service/ftrtec_gateway_service</LI>
       <LI>FT_ReplicationManager/tao_ft_replicationmanager</LI>
-      <LI>FT_Service</LI>
       <LI>Fault_Detector/tao_fault_detector</LI>
       <LI>Fault_Notifier/tao_fault_notifier</LI>
       <LI>Naming_Service/tao_cosnaming</LI>
