@@ -35,6 +35,7 @@ USER VISIBLE CHANGES BETWEEN TAO-1.8.2 and TAO-1.8.3
   * 'ImplRepo_Service'        to 'tao_imr_locator'
   * 'ImR_Activator'           to 'tao_imr_activator'
   * 'Fault_Notifier'          to 'tao_fault_notifier'
+  * 'Concurrency_Service'     to 'tao_cosconcurrency'
 
 USER VISIBLE CHANGES BETWEEN TAO-1.8.1 and TAO-1.8.2
 ====================================================
